# cable_observer

./: CMakeLists.txt  README.md  azure_kinect_recorder.py  b.py  br.py  cable_observer.py  cable_observer_dataset.py  cable_observer_image.py  camera2bag.py  interfaces.py  j_est.py  mask_segmentation.py  momentum.py  package.xml  path.py  path_processing.py  requirements.txt  setup.cfg  setup.py  single_image.py  skel.py  spline_mask.py  supervisor.py  test.py  video.py
cable_observer/: cable_observer.py  cable_observer_node.py  hsv_color_picker.py
cable_observer/utils/: deformable_linear_object.py  frame.py  frame_2d.py  frame_3d.py  image_processing.py  path.py  paths_processing.py  tracking.py
config/: d435i.yaml  dlo_3d.rviz  params.yaml
dataset/: create.py  scenarios.py
experiments/: train_AE.py  train_supervised.py
experiments/config_files/: basic.conf  super.conf
experiments/pretrained/: decoder_best_20214.index  encoder_best_20214.index
experiments/trained_AE/: decoder_best_1018.index  decoder_best_1034.data-00000-of-00002  decoder_best_1034.index  encoder_best_1018.data-00000-of-00002  encoder_best_1018.index  encoder_best_1034.index
launch/: cable_observer.launch  cable_observer.launch.py
models/: bezier_supervised.py  observer.py  observer_bezier.py
param/: defaults.param.yaml
rviz/: default.rviz
scripts/: cable_observer_node.py
spline/: spline.csv
spliner/: image_processing.py  main.py  main_distance_merge.py  main_test.py  main_test_distance_merge.py  path.py  paths_processing.py
src/cable_observer/utils/: __init__.py  debug_frame_processing.py  image_processing.py  path.py  paths_processing.py  tracking.py  utils.py
test/: test_params.py
utils/: image_processing.py  path.py  paths_processing.py  tracking.py  utils.py
