<?xml version="1.0"?>
<package format="3">
  <name>cable_observer</name>
  <version>0.0.1</version>
  <description>The cable_observer package</description>
  <author email="amadeusz.szymko@put.poznan.pl">Amadeusz Szymko</author>
  <maintainer email="amadeusz.szymko@put.poznan.pl">Amadeusz Szymko</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python-skimage-pip</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

</package>
