<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cable_observer</name>
  <version>1.0.0</version>
  <description>Deformable linear objects tracking.</description>
  <maintainer email="amadeusz.szymko@put.poznan.pl">Amadeusz Szymko</maintainer>
  <maintainer email="piotr.kicki@put.poznan.pl">Piotr Kicki</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>ament_cmake_python</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>python-skimage-pip</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
